# competitor-analysis

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  DESIGN.md  HUMAN_REVIEW.md  INFRASTRUCTURE.md  Makefile  README.md  competitor-analysis.code-workspace  docker-compose.dev.yml  docker-compose.yml  init-mongo.js  pyproject.toml  run.py
backend/: .env.example  Dockerfile  requirements.txt
backend/agents/: __init__.py  analysis_agent.py  client_onboarding.py  competitive_analysis.py  competitor_discovery.py  coordinator.py  data_collection.py  data_processing.py  llm_quality_agent.py  market_analysis.py  quality_agent.py  quality_assurance.py  report_agent.py  report_generation.py  search_agent.py
backend/api/: main.py
backend/api/routes/: analysis.py  products.py  reports.py  websocket.py
backend/database/: __init__.py  connection.py  repositories.py
backend/models/: __init__.py  agent_state.py  analysis.py  product.py  report.py  reports.py
backend/services/: __init__.py  llm_service.py  redis_service.py  tavily_service.py
backend/utils/: config.py
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AutocompleteInput.tsx  AutocompleteTextarea.tsx  Header.tsx  ProgressTracker.tsx  QualityReview.tsx  SearchLogs.tsx  WorkflowVisualization.tsx
frontend/src/pages/: AnalysisPage.tsx  (+4 more)
scripts/: dev.sh  pre-push-security-check.sh  setup-security.sh  setup.sh  test.sh
terraform/: README.md  ecs_deploy.tf  ecs_simple.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+3 files in other folders)
